# libwpe

./: .travis.yml  CMakeLists.txt  COPYING  NEWS  WPEConfig.cmake  c-index.html  egl-renderer.html  gamepad.html  hotdoc-sitemap.html  index.html  input.html  loader.html  meson.build  meson_options.txt  pasteboard.html  process.html  renderer.html  version.html  view-backend.html  wpe.pc.cmake  wpe.pc.in
.circleci/: config.yml
.github/workflows/: build.yml  ci.yml  codestyle.yml  format.yml  pr.yml
assets/: theme.json
assets/css/: bootstrap-toc.min.css  custom_bootstrap.css  dark-frontend.css  dumped.trie  frontend.css  light-frontend.css  light-sitenav.css  sitenav.css
assets/js/: bootstrap-toc.min.js  full-width.js  language_switching.js  lines_around_headings.js  navbar_offset_scroller.js  navigation.js  scrollspy.js  search.js  styleswitcher.js  tag_filtering.js  trie_index.js  utils.js
assets/js/search/: API  Backend  Bottom  Called  Center  Configure  Contents  DOM  Dispatchs  EGL  Fields  Frees  GPUProcess  Gamepad  Handler  Handling  Horizontal  Host  Initialization  Initializes  Input  Launches  Left  Length  Library  Loader  Major  Management  Maps  Max  Members  Methods  Micro  Minor  NetworkProcess  Note  Obtains  Parameters  Pasteboard  Process  (+390 more)
assets/js/search/hotdoc_fragments/: c-index.html-subpages.fragment  dumped.trie  egl-renderer.html-egl-renderer-page.fragment  egl-renderer.html-wpe_renderer_backend_egl.fragment  egl-renderer.html-wpe_renderer_backend_egl_base.fragment  egl-renderer.html-wpe_renderer_backend_egl_create.fragment  egl-renderer.html-wpe_renderer_backend_egl_destroy.fragment  egl-renderer.html-wpe_renderer_backend_egl_get_native_display.fragment  egl-renderer.html-wpe_renderer_backend_egl_get_platform.fragment  egl-renderer.html-wpe_renderer_backend_egl_interface.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target_base.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target_create.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target_destroy.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target_get_native_window.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target_initialize.fragment  egl-renderer.html-wpe_renderer_backend_egl_offscreen_target_interface.fragment  egl-renderer.html-wpe_renderer_backend_egl_target.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_base.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_client.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_create.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_deinitialize.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_destroy.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_dispatch_frame_complete.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_frame_rendered.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_frame_will_render.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_get_native_window.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_initialize.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_interface.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_resize.fragment  egl-renderer.html-wpe_renderer_backend_egl_target_set_client.fragment  gamepad.html-gamepad-page.fragment  gamepad.html-wpe_gamepad.fragment  gamepad.html-wpe_gamepad_axis.fragment  gamepad.html-wpe_gamepad_button.fragment  gamepad.html-wpe_gamepad_client_interface.fragment  gamepad.html-wpe_gamepad_create.fragment  gamepad.html-wpe_gamepad_destroy.fragment  gamepad.html-wpe_gamepad_dispatch_analog_button_changed.fragment  gamepad.html-wpe_gamepad_dispatch_axis_changed.fragment  (+112 more)
assets/templates/: base_page.html  brand-logo.html  enum_member.html  field_detail.html  footer.html  member_list.html  multi_return_value.html  navbar.html  page_content.html  parameter_detail.html  parameters.html  return_item.html  scripts.html  site_navigation.html  subpages.html
cmake/: DistTargets.cmake  FindEGL.cmake  FindLibxkbcommon.cmake  FindVulkan.cmake  VersioningUtils.cmake
docs/: backend-implementing.md  overview.md  sitemap.txt  wpe.toml.in
include/wpe/: file-system.h  gamepad.h  input-method.h  input-xkb.h  input.h  keysyms.h  libwpe-version.h  loader.h  meson.build  pasteboard.h  platform-backend.h  renderer-backend-egl.h  renderer-backend-vulkan.h  renderer-host.h  user-agent.h  version-deprecated.h  version-deprecated.h.cmake  version-deprecated.h.in  version.h  version.h.cmake  view-backend.h  view-ui.h  wpe-egl.h  wpe-vulkan.h  wpe.h
scripts/: update-keysyms-header  version.py
src/: alloc-private.h  alloc.c  file-system.c  gamepad-private.h  gamepad.c  input-method-private.h  input-method.c  input-xkb.c  input.c  key-unicode.c  loader-static.c  loader.c  pasteboard-generic.cpp  pasteboard.c  platform-backend.c  renderer-backend-egl-private.h  renderer-backend-egl.c  renderer-backend-vulkan-private.h  renderer-backend-vulkan.c  renderer-host-private.h  renderer-host.c  user-agent.c  version.c  view-backend-private.h  view-backend.c  view-ui-private.h  view-ui.c
subprojects/: libxkbcommon.wrap
subprojects/packagefiles/libxkbcommon-1.2.1/: meson.build  xkbcommon.def
