option('default-backend',
	type: 'string',
	value: '',
	description: 'Name of the backend library to load, instead of libWPEBackend-default.so'
)
option('disable-xkb-input',
	type: 'boolean',
	value: false,
	description: 'Disable use of libxkbcommon for keyboard input'
)
option('build-docs',
	type: 'boolean',
	value: false,
	description: 'Build reference documentation (needs HotDoc)'
)
