api_headers = [
	'export.h',
	'input.h',
	'input-xkb.h',
	'keysyms.h',
	'libwpe-version.h',
	'loader.h',
	'pasteboard.h',
	'renderer-backend-egl.h',
	'renderer-host.h',
	'version.h',
	'version-deprecated.h',
	'view-backend.h',
	'wpe-egl.h',
	'wpe.h',
]
install_headers(api_headers,
	subdir: join_paths('wpe-' + api_version, 'wpe'),
)
